# mtfind

./: CMakeLists.txt  input.txt
include/: FindApp.h
src/: FindApp.cpp  main.cpp
